# fflogs_viz

./: .gitignore  Cargo.toml
queries/: character.graphql  fights.graphql  report.graphql  schema.json
src/: client.rs  events.rs  main.rs  positions.rs  queries.rs  video.rs
